[package]
name = "rust_rocksdb_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { version = "0.18.0", features = ["multi-threaded-cf"]}
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }
once_cell = "*"
serde = { version = "1.0.136", features = ["derive"] }
rmp-serde = "1.1.0"
async-trait = "0.1.53"

[dev-dependencies]
bencher = "*"
threadpool = "1"

[[bench]]
name = "id"
harness = false